--- a/src/frontend/TODO
+++ b/src/frontend/TODO
@@ -1,8 +1,8 @@
-- flesh out AST enough to parse sample program
 - pass to link up variable refs to their definitions
 - pass to link up type uses to their defs (and include builtin types and a way
   to define arbitrary-width integers)
 - width-inferencing and typechecking pass
+- type removal pass (convert to wide signals and bitslices/concats)
 - call inlining pass
 - codegen visitor pass
 - support for structs
