--- a/src/frontend/TODO
+++ b/src/frontend/TODO
@@ -1,5 +1,3 @@
-- support for all IR-supported primitives at language level:
-  - timing constraints (timing {} block with 'stage N' statements)
 - ask/provide abstraction for bypass (in backend and frontend)
 - support for aggregates and type lowering pass
 - support for "macros" in C++ (as codegen visitor pass hooks)
@@ -11,3 +9,6 @@
   codegen API and the AST-with-pass-annotations nicely)
 - rework the AST as either protobufs or (maybe) something more
   custom/lighter-weight with explicit visitor support
+- support pragmas to set various timing-model options and/or choose different
+  timing models
+- rewrite the whole thing now that I understand the problem space better
