Support for multiple writers to ports, chans, and regs.
Multiple write-points may exist for these primitives as long as (i) they
are scheduled into the same pipeline stage, and (ii) they have disjoint
predicates. The lowering transform checks both of these conditions, and
then rewrites the set of writes to a single write with a MUX-tree on the
input. (Array writes are exempt from this: each write site becomes a
separate write port. To do better would actually require solving a
set-cover optimization problem with the predicates to find the minimum
number of write points.)

--- a/src/frontend/TODO
+++ b/src/frontend/TODO
@@ -1,18 +1,8 @@
 - Bypass values
   - prepare, provide, unprovide, ask, askvalue (with index match)
-- ondone blocks (like onkill) and support in backend
-  - ondone and onkill are codegen'd only once. The kill block is jumped to by
-    all kill points. The done block is placed at the end of the 'main spur'.
 - onkillyounger and support in the backend
   - codegen'd only once; jumped to by all killyounger points.
-- Multiple-writer semantics
-  - all writes to a port, chan, reg must be in the same timing stage
-  - arbitration is by an arbitrary order (well-defined results only when all
-    writes are mutually exclusive)
-    - TODO: How does this interact with onkill/ondone? These should take higher
-      priority in general, and be exempt from 'same stage'.
-  - writes to an array are slightly different: each write implies a separate
-    write port.
+- writevalid stmt.
 
 OoO-decomposed-as-macros:
 - transactional state macros (or primitives?)
