Support for "kill writes" to writable objects (ports/chans/regs).
A "killing write" is a write that occurs in the same stage as, and is
dominated (must be preceded) by, a killyounger. Such a write is able to
override a write to the same resource in an earlier stage because the
killyounger kills the earlier stage's write. Thus, killing writes are
exempt from the same-stage constraint. This change properly wires them
up (via stage-crossing links using RestartValue/RestartValueSrc IR ops)
so that they work.

--- a/src/frontend/TODO
+++ b/src/frontend/TODO
@@ -1,8 +1,12 @@
 - Bypass values
   - prepare, provide, unprovide, ask, askvalue (with index match)
 - onkillyounger and support in the backend
-  - codegen'd only once; jumped to by all killyounger points.
-- writevalid stmt.
+  - codegen'd once per killyounger, inserted into the BB immediately after the
+    killyounger.
+  - special flag set on port writes and reg writes that exempt them from
+    same-stage and disjoint-predicates checks.
+- port default value that's set if no write occurs. (If no default, the port
+  output value is unspecified if no write occurs for a given invocation.)
 
 OoO-decomposed-as-macros:
 - transactional state macros (or primitives?)
@@ -20,6 +24,9 @@ OoO-decomposed-as-macros:
     ops -- 'generate' starts its scope (to close the danger window and force
     stalls on dependents) and 'provide' actually yields the value to
     dependents.
+  - 'way' and 'ways' keywords that evaluate to whichever way we're in.
+  - backedges with configurable behavior: either stall all ways or (maybe)
+    first way stalls, other ways just kill so that restart gets them.
 - rename! macro
 - scoreboard-scheduler component or macro
   (a standard OoO backend is scoreboard scheduling composed with renaming)
